innitial first config

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
-<p>
-  header works!
-</p>
+<div class="header-page">
+  <a href="/" class="logo">
+    <img src="assets/img/logo.svg" alt="logo company">
+  </a>
+</div>
