--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -22,6 +22,30 @@
   }
 }
 
+// .caret-all {
+//   border: solid #fff;
+//   // border-width: 0 2px 2px 0;
+//   display: inline-block;
+//   // padding: 3px;
+//   transition: all .3s;
+//   background-image: url('/assets/img/expand-all-icon.svg')
+
+//   &--dark {
+//     border-color: #000;
+//   }
+
+//   &--down {
+//     transform: translateY(-25%) rotate(45deg);
+//   }
+
+//   &--up {
+//     transform: rotate(-135deg);
+//   }
+
+//   &--left {
+//     transform: rotate(135deg);
+//   }
+// }
 
 
 .btn {
