--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -4,13 +4,14 @@
   display: inline-block;
   padding: 3px;
   transition: all .3s;
+  transform-origin: center;
 
   &--dark {
     border-color: #000;
   }
 
   &--down {
-    transform: translateY(-25%) rotate(45deg);
+    transform: rotate(45deg);
   }
 
   &--up {
@@ -25,6 +26,9 @@
 
 
 .btn {
+  &-not-round {
+    border-radius: 0;
+  }
 
   &-bittersweet {
     background: #FF7769;
