--- a/src/assets/scss/imports/_color.scss
+++ b/src/assets/scss/imports/_color.scss
@@ -1,2 +1,18 @@
 $silver: #ccc;
 $white: #fff;
+
+$blue: #198cff;
+$chathams-blue: #113670;
+$mine-shaft: #333333;
+$geyser: #d1dddd;
+$silver: #cccccc;
+$mandy: #e14f4f;
+$mandy2: #ea596a;
+$dusty-gray: #999999;
+$white-lilac: #ebeff7;
+$cloud: #c0beba;
+$mine-shaft: #333232;
+$dove-gray: #666666;
+$heather: #b5bccb;
+$zumthor: #ecf6ff;
+$limeade: #5eae08;
