--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,4 +2,8 @@
   <a href="/" class="logo">
     <img src="assets/img/logo.svg" alt="logo company">
   </a>
+  <p>
+    <span>Welcome to the John Hancock</span>
+    <span>BADP/SEDP Rotational Programs</span>
+  </p>
 </div>
