--- a/src/app/components/statistic-program-table/statistic-program-table.component.html
+++ b/src/app/components/statistic-program-table/statistic-program-table.component.html
@@ -21,6 +21,6 @@
       </tr>
     </tbody>
   </table>
-  <app-primary-button (click)="routeToBadp()" [textBtn]="'About BADP'"></app-primary-button>
-  <app-primary-button (click)="routeToSedp()" [textBtn]="'About SEDP'"></app-primary-button>
+  <app-primary-button (click)="showAboutBadp()" [textBtn]="'About BADP'"></app-primary-button>
+  <app-primary-button (click)="showAboutSedp()" [textBtn]="'About SEDP'"></app-primary-button>
 </div>
