--- a/src/app/components/statistic-program-table/statistic-program-table.component.html
+++ b/src/app/components/statistic-program-table/statistic-program-table.component.html
@@ -10,7 +10,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of statisticData">
+      <tr *ngFor="let data of programStatistic">
         <td>
           <span *ngFor="let item of data.program">{{ item }}</span>
         </td>
