thead.bgcolor !== tr.bgcolor

--- a/src/app/pages/badpparticipants/participant-detail/participant-detail.component.html
+++ b/src/app/pages/badpparticipants/participant-detail/participant-detail.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="participant-detail__info">
         <div>
-          <h1>John McKinney</h1>
+          <p class="participant-detail__info--fullname">John McKinney</p>
         </div>
         <div>
           <input type="text" value="JMcKinney@yahoo.com">
