custom form-group

--- a/src/app/pages/badpparticipants/participant-detail/participant-detail.component.scss
+++ b/src/app/pages/badpparticipants/participant-detail/participant-detail.component.scss
@@ -4,13 +4,15 @@
 }
 
 .participant-detail {
-    flex-basis: 27.3%;
+    flex-basis: 350px;
+    flex-shrink: 0;
     &__cover-photo {
         height: 200px;
-        overflow: hidden
-        // img {
-            
-        // }
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: auto;   
+        }
     }
 
     &__detail {
@@ -19,17 +21,21 @@
 
     &__info {
         background-color: #0000C1;
-        > div {
-            padding: 24px;
+        padding-bottom: 14px;
+        padding-top: 22px;
+
+        &__fullname {
+            font-size: 40px;
+            font-weight: 100;
         }
 
-        &--fullname {
-            font-size: 44px;
-        }
-
-        &--fullname, input {
-            color: white;
-            background: transparent;
+        .my-form-group {
+            label {
+                color: #9B9B9B;
+            }
+            input {
+                color: white;
+            }
         }
     }
 }
