--- a/src/app/pages/badpparticipants/badpparticipants.component.scss
+++ b/src/app/pages/badpparticipants/badpparticipants.component.scss
@@ -125,7 +125,7 @@
 
 ::ng-deep .participant-modal {
   .modal-dialog {
-    max-width: 80vw !important;
+    max-width: 1024px !important;
 
     .modal-body {
       padding: 0;
