--- a/src/app/pages/badpparticipants/add-participant/add-participant.component.html
+++ b/src/app/pages/badpparticipants/add-participant/add-participant.component.html
@@ -1,6 +1,8 @@
 <div class="add-participant">
     <div class="add-participant__left">
-        <div class="add-participant__avatar"></div>
+        <div class="add-participant__avatar">
+            
+        </div>
         <div class="add-participant__infor"></div>
     </div>
     <div class="add-participant__right"></div>
