--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,109 +1,6 @@
-/* You can add global styles to this file, and also import other style files *//* Manulife JH Sans */
+/* You can add global styles to this file, and also import other style files */
 
-@font-face {
-	font-family:'Manulife JH Sans';
-	src:	url('./assets/font/ManulifeJHSans-Light.eot');
-	src:	url('./assets/font/ManulifeJHSans-Light.eot?#iefix') format('embedded-opentype'),
-			url('./assets/font/ManulifeJHSans-Light.woff2') format('woff2'),
-			url('./assets/font/ManulifeJHSans-Light.woff') format('woff');
-	font-weight: 300;
-	font-style: normal;
-}
-
-@font-face {
-	font-family:'Manulife JH Sans';
-	src:	url('./assets/font/ManulifeJHSans-Regular.eot');
-	src:	url('./assets/font/ManulifeJHSans-Regular.eot?#iefix') format('embedded-opentype'),
-			url('./assets/font/ManulifeJHSans-Regular.woff2') format('woff2'),
-			url('./assets/font/ManulifeJHSans-Regular.woff') format('woff');
-	font-weight: 400;
-	font-style: normal;
-}
-
-@font-face {
-	font-family:'Manulife JH Sans';
-	src:	url('./assets/font/ManulifeJHSans-Demibold.eot');
-	src:	url('./assets/font/ManulifeJHSans-Demibold.eot?#iefix') format('embedded-opentype'),
-			url('./assets/font/ManulifeJHSans-Demibold.woff2') format('woff2'),
-			url('./assets/font/ManulifeJHSans-Demibold.woff') format('woff');
-	font-weight: 600;
-	font-style: normal;
-}
-
-@font-face {
-	font-family:'Manulife JH Sans';
-	src:	url('./assets/font/ManulifeJHSans-Bold.eot');
-	src:	url('./assets/font/ManulifeJHSans-Bold.eot?#iefix') format('embedded-opentype'),
-			url('./assets/font/ManulifeJHSans-Bold.woff2') format('woff2'),
-			url('./assets/font/ManulifeJHSans-Bold.woff') format('woff');
-	font-weight: 700;
-	font-style: normal;
-}
-
-
-/* Manulife JH Serif */
-
-@font-face {
-	font-family:'Manulife JH Serif';
-	src:	url('./assets/font/ManulifeJHSerif-Italic.eot');
-	src:	url('./assets/font/ManulifeJHSerif-Italic.eot?#iefix') format('embedded-opentype'),
-			url('./assets/font/ManulifeJHSerif-Italic.woff2') format('woff2'),
-			url('./assets/font/ManulifeJHSerif-Italic.woff') format('woff');
-	font-weight: 400;
-	font-style: italic;
-}
-
-
-
-html, body {
-  font-family: 'Manulife JH Sans', Arial, sans-serif;
-}
-
-.caret {
-  border: solid #fff;
-  border-width: 0 2px 2px 0;
-  display: inline-block;
-  padding: 3px;
-  transition: all .3s;
-  transform-origin: center;
-
-  &--dark {
-    border-color: #000;
-  }
-
-  &--down {
-    transform: rotate(45deg);
-  }
-
-  &--up {
-    transform: rotate(-135deg);
-  }
-
-  &--left {
-    transform: rotate(135deg);
-  }
-}
-
-.btn {
-  &-not-round {
-    border-radius: 0;
-  }
-
-  &-bittersweet {
-    background: #FF7769;
-    color: #fff;
-  }
-
-  &-transperant {
-    background: transparent;
-    border: none !important;
-    outline: none !important;
-    cursor: pointer;
-  }
-}
-
-table {
-  td {
-    word-break: break-word;
-  }
-}
+@import 'assets/scss/font';
+@import 'assets/scss/generic';
+@import 'assets/scss/override';
+@import 'assets/scss/utils';
