--- a/src/app/pages/badpparticipants/badpparticipants.component.html
+++ b/src/app/pages/badpparticipants/badpparticipants.component.html
@@ -1,23 +1,25 @@
 <div class="badp-participant">
     <div class="header">
-        <div class="header__back-to back-to">
-            <div class="back-to__caret">
-                <div class="caret caret--left"></div>
+        <div class="container">
+            <div class="header__back-to back-to">
+                <div class="back-to__caret header__back-to__caret">
+                    <div class="caret caret--left"></div>
+                </div>
+                <div class="back-to__text">Back to Dashboard</div>
             </div>
-            <div class="back-to__text">Back to Dashboard</div>
-        </div>
 
-        <div class="header__select">
-            <h1 class="header__select-text">BADP Participants Class of</h1>
-            <div class="header__select-option">
-                <app-dropdown
-                    [transparent]="'true'"
-                    [light]="'true'"
-                    [dropdownClassName]="'header__dropdown-name'"
-                    [options]="listOptions"
-                    [value]="optionSelected"
-                    (onValueChange)="handleSelectOption($event)"
-                ></app-dropdown>
+            <div class="header__select">
+                <h1 class="header__select-text">BADP Participants Class of</h1>
+                <div class="header__select-option">
+                    <app-dropdown
+                        [transparent]="'true'"
+                        [light]="'true'"
+                        [dropdownClassName]="'header__dropdown-name'"
+                        [options]="listOptions"
+                        [value]="optionSelected"
+                        (onValueChange)="handleSelectOption($event)"
+                    ></app-dropdown>
+                </div>
             </div>
         </div>
     </div>
@@ -27,30 +29,32 @@
     </div>
 
     <div class="content" [ngClass]="{ 'content-admin': isAdmin }">
-        <table class="table custom-table participant-table">
-            <thead class="participant-table__thead">
-                <tr>
-                    <th class="text-center">Name</th>
-                    <th>Email</th>
-                    <th>Current Rotation</th>
-                    <th>Manager</th>
-                </tr>
-            </thead>
-            <tbody class="participant-table__tbody">
-                <tr class="participant-table__row" *ngFor="let participant of datas"
-                    (click)="showParticipantModal(participant)">
-                    <td>
-                        <div class="participant-table__name">
-                            <img class="participant-table__avatar" src="{{participant.avatar}}" />
-                            <span>{{participant.name}}</span>
-                        </div>
-                    </td>
-                    <td>{{participant.email}}</td>
-                    <td>{{participant.rotation}}</td>
-                    <td>{{participant.manager}}</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="container">
+            <table class="table custom-table participant-table">
+                <thead class="participant-table__thead">
+                    <tr>
+                        <th class="text-center">Name</th>
+                        <th>Email</th>
+                        <th>Current Rotation</th>
+                        <th>Manager</th>
+                    </tr>
+                </thead>
+                <tbody class="participant-table__tbody">
+                    <tr class="participant-table__row" *ngFor="let participant of datas"
+                        (click)="showParticipantModal(participant)">
+                        <td>
+                            <div class="participant-table__name">
+                                <img class="participant-table__avatar" src="{{participant.avatar}}" />
+                                <span>{{participant.name}}</span>
+                            </div>
+                        </td>
+                        <td>{{participant.email}}</td>
+                        <td>{{participant.rotation}}</td>
+                        <td>{{participant.manager}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
