--- a/src/app/pages/badpparticipants/badpparticipants.component.scss
+++ b/src/app/pages/badpparticipants/badpparticipants.component.scss
@@ -1,6 +1,7 @@
 .back-to {
   align-items: center;
   display: flex;
+  position: relative;
 
   &__caret {
     align-items: center;
@@ -9,12 +10,12 @@
     display: flex;
     justify-content: center;
     height: 20px;
+    margin-right: 10px;
     width: 20px;
   }
 
   &__text {
     color: white;
-    margin-left: 10px;
   }
 }
 
@@ -26,20 +27,24 @@
   padding: 0.1px;
 
   &__back-to {
-    margin-left: 47px;
     margin-top: 16px;
+
+    &__caret {
+      left: 0;
+      position: absolute;
+      transform: translateX(calc(-100% - 10px));
+    }
   }
 
   &__select {
     align-items: center;
     display: flex;
-    margin-left: 88px;
     margin-top: 40px;
   }
 
   &__select-text {
     color: #fff;
-    font-size: 36px;
+    font-size: 40px;
     margin: 0;
   }
 
@@ -72,7 +77,7 @@
 }
 
 .content {
-  padding: 32px 88px 0 88px;
+  padding-top: 32px;
 
   &-content-admin {
     padding-top: 0;
@@ -135,7 +140,7 @@
 
 ::ng-deep .add-participant-modal {
   .modal-dialog {
-    width: 1024px;
+    max-width: 1024px !important;
 
     .modal-body {
       padding: 0;
