--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,20 @@
 <div class="header-page">
-  <a href="/" class="logo">
-    <img src="assets/img/logo.svg" alt="logo company">
-  </a>
-  <p>
-    <span>Welcome to the John Hancock</span>
-    <span>BADP/SEDP Rotational Programs</span>
-  </p>
+  <div class="header-page-content">
+    <button class="menu-btn">
+      <img src="../../../assets/img/burger menu.svg" alt="drop-menu"/>
+    </button>
+    <a href="/" class="logo">
+      <img src="assets/img/logo.svg" alt="logo company">
+    </a>
+    <p class="header-page-title">
+      <span>Welcome to the John Hancock</span>
+      <span>BADP/SEDP Rotational Programs</span>
+    </p>
+  </div>
+  <div class="header-page-profile">
+    <img src="" />
+    <span>
+      <img src="../../../assets//img/" />
+    </span>
+  </div>
 </div>
