--- a/src/app/components/badp-sedp/badp-sedp.component.html
+++ b/src/app/components/badp-sedp/badp-sedp.component.html
@@ -21,7 +21,9 @@
       </tr>
     </tbody>
   </table>
-  <app-primary-button (click)="onclickJourney()" [textBtn]="'Journey'"></app-primary-button>
-  <app-primary-button (click)="onclickParticipants()" [textBtn]="'Participants'"></app-primary-button>
+  <div class="data-table-footer">
+    <app-primary-button class="data-table-btn" (click)="onclickJourney()" [textBtn]="'Journey'"></app-primary-button>
+    <app-primary-button class="data-table-btn" (click)="onclickParticipants()" [textBtn]="'Participants'"></app-primary-button>
+  </div>
 </div>
 
