--- a/src/app/pages/badpparticipants/participant-detail/participant-detail.component.html
+++ b/src/app/pages/badpparticipants/participant-detail/participant-detail.component.html
@@ -5,19 +5,19 @@
     </div>
     <div class="participant-detail__info">
       <div class="form-group my-form-group">
-        <input type="email" class="form-control participant-detail__info__fullname" id="email" value="John McKinney" disabled>
+        <input type="text" class="form-control participant-detail__info__fullname" id="email" value="John McKinney">
       </div>
       <div class="form-group my-form-group">
         <label for="email">Email</label>
-        <input type="email" class="form-control" id="email" disabled value="Abc@gmail.com">
+        <input type="email" class="form-control" id="email" value="Abc@gmail.com">
       </div>
       <div class="form-group my-form-group">
-        <label for="email">Class Year</label>
-        <input type="email" class="form-control" id="email">
+        <label for="class_year">Class Year</label>
+        <input type="text" class="form-control" id="class_year" value="2019">
       </div>
       <div class="form-group my-form-group">
-        <label for="email">Program</label>
-        <input type="email" class="form-control" id="email">
+        <label for="program">Program</label>
+        <input type="text" class="form-control" id="program" value="BADP">
       </div>
     </div>
   </div>
