--- a/src/assets/scss/_utils.scss
+++ b/src/assets/scss/_utils.scss
@@ -31,6 +31,14 @@
   &-bittersweet {
     background: #FF7769;
     color: #fff;
+    outline: none !important;
+  }
+
+  &-bittersweet-reverse {
+    background: white;
+    color: #FF7769;
+    box-shadow: inset 0 0 0 2px #FF7769;
+    outline: none !important;
   }
 
   &-transperant {
