--- a/src/app/pages/badpparticipants/participant-detail/participant-detail.component.scss
+++ b/src/app/pages/badpparticipants/participant-detail/participant-detail.component.scss
@@ -37,6 +37,9 @@
                 table-layout: fixed;
                 width: 100%;
             }
+            td {
+                // width: 118px;
+            }
         }
 
         .history-note-row td {
