--- a/src/app/pages/badpparticipants/badpparticipants.component.html
+++ b/src/app/pages/badpparticipants/badpparticipants.component.html
@@ -12,8 +12,7 @@
                 <h1 class="header__select-text">BADP Participants Class of</h1>
                 <div class="header__select-option">
                     <app-dropdown
-                        [transparent]="'true'"
-                        [light]="'true'"
+                        [variant]="'transparent, light'"
                         [dropdownClassName]="'header__dropdown-name'"
                         [options]="listOptions"
                         [value]="optionSelected"
