--- a/src/assets/scss/_utils.scss
+++ b/src/assets/scss/_utils.scss
@@ -50,6 +50,7 @@
     background: rgba(216, 216, 216, 0.1) !important;
     border-bottom: 2px solid #9B9B9B;
     border-radius: 0px;
+    color: white;
     font-weight: 100;
 
     &:disabled {
@@ -60,6 +61,7 @@
   }
 
   > label {
+    color: #9B9B9B;
     font-size: 16px
   }
 }
