custom text-area

--- a/src/app/pages/badpparticipants/participant-detail/participant-detail.component.html
+++ b/src/app/pages/badpparticipants/participant-detail/participant-detail.component.html
@@ -72,7 +72,7 @@
               <td colspan="3">
                 <span *ngIf="!editMode">{{ history.note }}</span>
                 <div  *ngIf="editMode" class="form-group">
-                  <textarea class="form-control rounded-0" rows="5">{{ history.note }}</textarea>
+                  <textarea class="form-control rounded-0 my-textarea" rows="5">{{ history.note }}</textarea>
                 </div>
               </td>
             </tr>
