--- a/src/assets/scss/_override.scss
+++ b/src/assets/scss/_override.scss
@@ -4,6 +4,14 @@ table {
   }
 }
 
+.my-textarea {
+  border-radius: 0 !important;
+  outline: none !important;
+  border: none !important;
+  border-bottom: 2px solid #282B3E !important;
+  box-shadow: unset !important;
+}
+
 .container {
   @media (min-width: 1200px) {
     max-width: 1134px !important;
