--- a/src/app/pages/badpparticipants/badpparticipants.component.scss
+++ b/src/app/pages/badpparticipants/badpparticipants.component.scss
@@ -152,6 +152,8 @@
 ::ng-deep .participant-detail {
   display: block;
   width: 100%;
+  min-height: auto;
+  overflow: hidden;
 
   &__cover-photo {
     height: 200px;
@@ -169,9 +171,10 @@
   }
 
   &__info {
-    background-color: #0000C1;
     padding-bottom: 14px;
     padding-top: 22px;
+    height: 100%;
+    background: #0000C1 !important;
 
     &__fullname {
       font-size: 40px;
