--- a/src/app/pages/badpparticipants/badpparticipants.component.html
+++ b/src/app/pages/badpparticipants/badpparticipants.component.html
@@ -29,30 +29,31 @@
 
     <div class="content" [ngClass]="{ 'content-admin': isAdmin }">
         <div class="container">
-            <table class="table custom-table participant-table">
-                <thead class="participant-table__thead">
-                    <tr>
-                        <th class="text-center">Name</th>
-                        <th>Email</th>
-                        <th>Current Rotation</th>
-                        <th>Manager</th>
-                    </tr>
-                </thead>
-                <tbody class="participant-table__tbody">
-                    <tr class="participant-table__row" *ngFor="let participant of datas"
-                        (click)="showParticipantModal(participant)">
-                        <td>
-                            <div class="participant-table__name">
+            <div class="custom-table custom-table--primary participant-table">
+                <div class="custom-table__thead">
+                    <div class="custom-table__col text-center">Name</div>
+                    <div class="custom-table__col">Email</div>
+                    <div class="custom-table__col">Current Rotation</div>
+                    <div class="custom-table__col">Manager</div>
+                </div>
+                <perfect-scrollbar style="max-height: 400px;" (psYReachStart)="onScrollEvent($event)">
+                    <div class="custom-table__tbody">
+                        <div
+                            class="custom-table__row custom-table__row--center participant-table__row"
+                            *ngFor="let participant of datas"
+                            (click)="showParticipantModal(participant)"
+                        >
+                            <div class="custom-table__col participant-table__name">
                                 <img class="participant-table__avatar" src="{{participant.avatar}}" />
                                 <span>{{participant.name}}</span>
                             </div>
-                        </td>
-                        <td>{{participant.email}}</td>
-                        <td>{{participant.rotation}}</td>
-                        <td>{{participant.manager}}</td>
-                    </tr>
-                </tbody>
-            </table>
+                            <div class="custom-table__col">{{participant.email}}</div>
+                            <div class="custom-table__col">{{participant.rotation}}</div>
+                            <div class="custom-table__col">{{participant.manager}}</div>
+                        </div>
+                    </div>
+                </perfect-scrollbar>
+            </div>
         </div>
     </div>
 </div>
