--- a/src/app/pages/badpparticipants/badpparticipants.component.scss
+++ b/src/app/pages/badpparticipants/badpparticipants.component.scss
@@ -77,6 +77,7 @@
 }
 
 .content {
+  padding-bottom: 50px;
   padding-top: 32px;
 
   &-content-admin {
@@ -84,33 +85,46 @@
   }
 }
 
-.participant-table {
-  &__thead {
-    display: table;
-    table-layout: fixed;
-    width: 100%;
+.custom-table {
+  $block: &;
+
+  &--primary {
+    #{$block}__thead {
+      background: #0000C1;
+      color: #fff;
+    }
   }
 
-  &__tbody {
-    display: block;
-    height: 400px;
-    overflow: auto;
-
-    tr {
-      display: table;
-      table-layout: fixed;
-      width: 100%;
-    }
+  &__thead {
+    display: flex;
+    padding: 20px 0;
   }
 
   &__row {
+    border-bottom: 1px solid #E6E6E6;
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+
+    &:hover {
+      background: #f7f7f7;
+    }
+
+    &--center {
+      align-items: center;
+    }
+  }
+
+  &__col {
+    flex-basis: 1px;
+    flex-grow: 1;
+  }
+}
+
+.participant-table {
+  &__row {
     cursor: pointer;
     height: 80px;
-
-    td {
-      padding: 0 .75rem;
-      vertical-align: middle;
-    }
   }
 
   &__name {
