--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~perfect-scrollbar/css/perfect-scrollbar.css';
 @import 'assets/scss/font';
 @import 'assets/scss/generic';
 @import 'assets/scss/override';
